OL-layout-overflow fix left sidebar width overflow

--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -13,7 +13,6 @@
 .content {
   display: flex;
   flex-direction: column;
-  width: calc(100% - 235px);
   min-height: calc(100vh - 60px);
   transition:
     width 0.25s ease,
